# PianoTiles

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/forms/: main_menu.txt
assets/shaders/: gaussian_blur.frag
code/: Game.cpp  main.cpp
code/GameStates/: MainMenuState.cpp
header/: Game.hpp
header/Game/: ResourceIDs.hpp
header/GameStates/: MainMenuState.hpp
header/Utility/: Keyboard.hpp
